# doublezero-offchain

./: .env.example  .envrc.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  another_payer.json  dummy.json  env.example  local_validator.sh  rewards_manager.json  rust-toolchain.toml  service_key_1.json
.github/workflows/: ci.yml  local-validator.yml  release.2z.yml  (+5 more)
config/: default.toml  devnet.toml  testnet.toml
crates/calculator/: Cargo.toml  README.md
crates/calculator/src/: cli.rs  csv_exporter.rs  data_prep.rs  data_preparation.rs  input.rs  ledger_operations.rs  lib.rs  main.rs  orchestrator.rs  proof.rs  recorder.rs  settings.rs  shapley_aggregator.rs  shapley_handler.rs  util.rs
crates/calculator/tests/: test_pub_links.rs  test_sanity.rs
crates/contributor-rewards/: .env.example  Cargo.toml  README.md  example.config.toml
crates/contributor-rewards/src/: lib.rs  main.rs  serializer.rs
crates/contributor-rewards/src/calculator/: constants.rs  data_prep.rs  input.rs  ledger_operations.rs  mod.rs  orchestrator.rs  proof.rs  recorder.rs  revenue_distribution.rs  shapley_aggregator.rs  shapley_handler.rs  util.rs
crates/contributor-rewards/src/cli/: common.rs  debug.rs  demand_strategies.rs  export.rs  impls.rs  inspect.rs  mod.rs  rewards.rs  scheduler.rs  shapley.rs  snapshot.rs  telemetry.rs  traits.rs
crates/contributor-rewards/src/ingestor/: demand.rs  epoch.rs  fetcher.rs  inet_accumulator.rs  internet.rs  mod.rs  serviceability.rs  telemetry.rs  types.rs
crates/contributor-rewards/src/processor/: constants.rs  internet.rs  mod.rs  process.rs  stats.rs  telemetry.rs  util.rs
crates/contributor-rewards/src/scheduler/: mod.rs  state.rs  worker.rs
crates/contributor-rewards/src/settings/: mod.rs  validation.rs
crates/contributor-rewards/src/worker/: mod.rs  runner.rs  state.rs
crates/contributor-rewards/tests/: devnet_inet_data.json  leader-schedule-epoch-89.json  test_demand.rs  test_historical_epoch.rs  test_leader_schedules.json  test_pub_links.rs  test_pvt_links.rs  test_sanity.rs  test_scheduler.rs  test_telemetry_defaults.rs  worker_test.rs
crates/contributor-rewards/tests/common/: mod.rs
crates/ingestor/: Cargo.toml  README.md
crates/ingestor/src/: debug.rs  demand.rs  epoch.rs  error.rs  fetcher.rs  filters.rs  internet.rs  lib.rs  rpc.rs  serviceability.rs  settings.rs  telemetry.rs  types.rs
crates/ingestor/tests/: test_demand.rs
crates/processor/: Cargo.toml  README.md
crates/processor/src/: data_store.rs  dzd_telemetry_processor.rs  internet.rs  lib.rs  process.rs  settings.rs  stats.rs  telemetry.rs  util.rs
crates/scheduled-command/: Cargo.toml
crates/scheduled-command/src/: lib.rs
crates/sentinel/: Cargo.toml
crates/sentinel/src/: constants.rs  error.rs  lib.rs  main.rs  settings.rs
crates/sentinel/src/client/: doublezero_ledger.rs  solana.rs
crates/sentinel/src/sentinel/: handler.rs  listener.rs  mod.rs  poller.rs  verification.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  validation.rs
crates/solana-cli/: Cargo.toml
crates/solana-cli/src/: helpers.rs  lib.rs  main.rs
crates/solana-cli/src/command/: ata.rs  mod.rs
crates/solana-cli/src/command/passport/: fetch.rs  find.rs  find_validator.rs  mod.rs  prepare_access.rs  request.rs  request_access.rs
crates/solana-cli/src/command/revenue_distribution/: contributor_rewards.rs  fetch.rs  mod.rs  relay.rs  solana_validator_deposit.rs  validator_deposit.rs
crates/solana-fork/: Cargo.toml
crates/solana-fork/src/: main.rs
crates/validator-debt/: Cargo.toml
crates/validator-debt/src/: block.rs  command.rs  inflation.rs  jito.rs  ledger.rs  lib.rs  main.rs  rewards.rs  rpc.rs  transaction.rs  validator_debt.rs  worker.rs
crates/validator-debt/src/command/: calculate.rs  initialize.rs  mod.rs
crates/validator-debt/tests/: integration_tests.rs
data_fetcher/: Cargo.toml  README.md
data_fetcher/src/: baseline_generator.rs  fetcher.rs  internet.rs  lib.rs  rpc.rs  serviceability.rs  settings.rs  telemetry.rs  types.rs
db_engine/: Cargo.toml
db_engine/src/: engine.rs  lib.rs  settings.rs
db_engine/src/sql/: metrics_queries.rs  mod.rs  queries.rs
demand_generator/: Cargo.toml  README.md
demand_generator/src/: aggregator.rs  city_aggregator.rs  cli.rs  constants.rs  demand_matrix.rs  generator.rs  lib.rs  main.rs  settings.rs  types.rs  validators_app.rs
metrics_processor/: Cargo.toml  README.md
metrics_processor/src/: cache.rs  data_converter.rs  data_store.rs  dzd_telemetry_processor.rs  internet_telemetry_processor.rs  lib.rs  processor.rs  settings.rs  shapley_types.rs  telemetry_processor.rs  telemetry_stats.rs  types.rs
metrics_processor/src/engine/: baseline_generator.rs  dbengine.rs  mod.rs  test_data.rs  types.rs
metrics_processor/src/engine/queries/: common_queries.rs  metrics_queries.rs  mod.rs  schema.rs
metrics_processor/tests/: data_converter_test.rs  data_store_test.rs  processor_test.rs
release/: .goreleaser.2z.yaml  .goreleaser.contributor-rewards.yaml  .goreleaser.doublezero-solana-cli.yaml  .goreleaser.doublezero-solana-validator-debt.yaml  .goreleaser.doublezero-solana.yaml  .goreleaser.sentinel.yaml
rewards_calculator/: Cargo.toml  README.md  build.rs
rewards_calculator/src/: cli.rs  constants.rs  demand_exporter.rs  lib.rs  main.rs  merkle_generator.rs  orchestrator.rs  orchestrator_v2.rs  settings.rs  shapley_calculator.rs  shapley_handler.rs  util.rs
rewards_calculator/tests/: e2e_proof_verification_test.rs  integration_test.rs  merkle_integration_test.rs  simulated_test.rs  verification_test.rs
rewards_calculator/tests/test_data/: simulated_private_links.csv
s3_publisher/: Cargo.toml
s3_publisher/src/: error.rs  lib.rs  settings.rs
s3_publisher/tests/: publisher_test.rs
s3_publisher/tests/common/: harness.rs
sh/: test_2z_cli_clean.sh  test_doublezero_solana_clean.sh
verification_generator/: Cargo.toml
verification_generator/src/: generator.rs  hashing.rs  lib.rs  settings.rs
verification_generator/tests/: configuration.rs  verification_flow.rs
(+36 files in other folders)
