[workspace]
members = [
    "crates/settings",
    "crates/ingestor",
    "crates/processor",
    "crates/calculator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Malbec Labs <dev@malbeclabs.com>"]
readme = "README.md"
description = "DoubleZero Off-Chain Rewarder"
license = "Apache-2.0"
repository = "https://github.com/doublezerofoundation/doublezero-rewarder"
homepage = "https://github.com/doublezerofoundation/doublezero-rewarder"

[workspace.dependencies]
anyhow = "1"
backon = "1"
base64 = "0"
borsh = "1"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = "0"
csv = "1"
doublezero-serviceability = { git = "ssh://git@github.com/malbeclabs/doublezero", features = [ "no-entrypoint", "serde"] }
doublezero-telemetry = { git = "ssh://git@github.com/malbeclabs/doublezero", features = [ "no-entrypoint", "serde" ] }
doublezero_sdk = { git = "ssh://git@github.com/malbeclabs/doublezero" }
doublezero-record = { git = "ssh://git@github.com/malbeclabs/doublezero", features = [ "no-entrypoint" ] }
futures-util = "0"
itertools = "0"
network-shapley = { git = "https://github.com/doublezerofoundation/network-shapley-rs", features = ["serde", "borsh"] }
rand = "0"
governor = "0"
rayon = "1"
rust_decimal = { version = "1", features = ["serde", "macros"] }
reqwest = { version = "0", features = [ "json" ] }
sha2 = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "2.2.7"
solana-account-decoder = "2.2.7"
solana-sdk = "2.2.2"
solana-epoch-info = "3"
solana-system-interface = "1"
svm-hash = { version = "0.1.0-beta.1", features = [ "bytemuck", "borsh" ] }
tabled = { version = "0", features = [ "std", "derive" ]}
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0" }
toml = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
