[package]
name = "data_fetcher"
version = "0.1.0"

# Inherited
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
db_engine = { path = "../db_engine" }
doublezero-serviceability.workspace = true
doublezero-telemetry.workspace = true
figment.workspace = true
futures-util.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
