[package]
name = "metrics_processor"
version = "0.1.0"

# Inherited
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
data_fetcher = { path = "../data_fetcher" }
db_engine = { path = "../db_engine" }
figment.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
shapley.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
