[package]
name = "metrics_processor"
version = "0.1.0"

# Inherited
edition.workspace = true

[dependencies]
data_fetcher = { path = "../data_fetcher" }
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
doublezero-serviceability.workspace = true
doublezero-telemetry.workspace = true
figment.workspace = true
rand.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
network-shapley.workspace = true
solana-sdk.workspace = true
tabled.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
