[package]
name = "s3_publisher"
version = "0.1.0"

# Inherited
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
chrono.workspace = true
figment.workspace = true
flate2.workspace = true
md5.workspace = true
parquet.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers = "0"
testcontainers-modules = { version = "0", features = ["minio"] }
uuid = { version = "1", features = ["v4"] }
