[package]
name = "verification_generator"
version = "0.1.0"

# Inherited
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
db_engine = { path = "../db_engine" }
figment.workspace = true
hex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
