[package]
name = "verification_generator"
version = "0.1.0"

# Inherited
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
metrics_processor = { path = "../metrics_processor" }
figment.workspace = true
hex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
