[package]
name = "processor"
readme = "README.md"

# Workspace inherited keys
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
ingestor = { path = "../ingestor" }
doublezero-serviceability.workspace = true
doublezero-telemetry.workspace = true
figment.workspace = true
rand.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
network-shapley.workspace = true
solana-sdk.workspace = true
tabled.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
