[package]
name = "doublezero-ledger-sentinel"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
borsh.workspace = true
clap.workspace = true
config.workspace = true
doublezero-passport.workspace = true
doublezero-program-common.workspace = true
doublezero-program-tools.workspace = true
doublezero-serviceability.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-account-decoder-client-types.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types.workspace = true
solana-system-interface.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[[bin]]
name = "doublezero-sentinel"
path = "src/main.rs"
