[package]
name = "settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Settings for DoubleZero Rewarder"

[dependencies]
config.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
borsh.workspace = true

[dev-dependencies]
tempfile = "3"
