[package]
name = "doublezero-solana-validator-debt"

description = "Crate that processes debt for validators"

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backon.workspace = true
borsh.workspace = true
chrono.workspace = true
clap.workspace = true
doublezero-program-tools.workspace = true
doublezero-record.workspace = true
doublezero-revenue-distribution.workspace = true
doublezero-serviceability.workspace = true
doublezero_sdk.workspace = true
futures.workspace = true
mockall.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types.workspace = true
svm-hash.workspace = true
tabled.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

